[package]
name = "proxy_server"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hyper = {version = "1.4.1",features = ["full"]}
rand = "0.9.0-alpha.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"
env_logger = "0.11.5"
fern = "0.6"
chrono = "0.4.38"